--- a/assets/layouts/_posthistory.scss
+++ b/assets/layouts/_posthistory.scss
@@ -12,6 +12,11 @@ header.post-history, header.friend {
 
 main.post-history {
   margin-top: 40px;
+  section#posts {
+    @media screen and (min-width: $smartphones) and (max-width: $desktop) {
+      margin-bottom: 57px;
+    }
+  }
   nav.explore {
     margin-bottom: 15px;
   }
